Fix code block wrapping

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -123,3 +123,8 @@ nav.toc ul {
   margin: 0.5rem 0 0 1.5rem;
   padding: 0;
 }
+
+/* Code Blocks */
+code {
+  white-space: normal;
+}
